--- a/Index.html
+++ b/Index.html
@@ -1,160 +1,150 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>Chat export</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LM Arena — Chat Archive</title>
+
+  <!-- MathJax -->
+  <script>
+    window.MathJax = {
+      tex: {
+        inlineMath: [['\\(', '\\)']],
+        displayMath: [['$$', '$$']],
+      },
+      svg: { fontCache: 'global' }
+    };
+  </script>
+  <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
   <style>
-    :root{
-      --bg: #0b0f19;
-      --panel: #0f172a;
+    :root {
+      --bg: #0e0f13;
+      --panel: #151720;
+      --user: #1e293b;
+      --assistant: #111827;
+      --border: #2a2f3a;
       --text: #e5e7eb;
-      --muted: #a1a1aa;
-      --bubble: #111827;
-      --bubble2:#0b1220;
-      --border:#243044;
-      --codebg:#070b14;
-      --link:#7dd3fc;
-      --maxw: 920px;
+      --muted: #9ca3af;
+      --code: #0b1020;
     }
-    html,body{height:100%;}
-    body{
-      margin:0;
-      background: radial-gradient(1200px 900px at 20% 0%, #111827 0%, var(--bg) 55%);
-      color:var(--text);
-      font: 15px/1.55 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    }
-    header{
-      position: sticky; top: 0;
-      backdrop-filter: blur(10px);
-      background: color-mix(in srgb, var(--bg) 70%, transparent);
-      border-bottom: 1px solid var(--border);
-      z-index: 5;
-    }
-    .wrap{max-width:var(--maxw); margin:0 auto; padding: 14px 14px;}
-    .title{display:flex; gap:10px; align-items:baseline; flex-wrap:wrap;}
-    .title h1{font-size:16px; margin:0;}
-    .title .meta{color:var(--muted); font-size:12px;}
-    main{padding: 10px 0 40px;}
-    .chat{display:flex; flex-direction:column; gap:12px;}
-    .msg{
-      border:1px solid var(--border);
-      background:linear-gradient(180deg, var(--bubble) 0%, var(--bubble2) 100%);
-      border-radius:14px;
-      padding:12px 12px;
-      overflow:hidden;
-    }
-    .role{
-      color:var(--muted);
-      font-size:12px;
-      margin-bottom:6px;
-      letter-spacing:.02em;
-      text-transform:uppercase;
-    }
-    .content{white-space:normal;}
-    .content p{margin: 0 0 10px;}
-    .content p:last-child{margin-bottom:0;}
-    .content a{color:var(--link); text-decoration:none;}
-    .content a:hover{text-decoration:underline;}
 
-    pre, code{
-      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
-      font-size: 13px;
+    * {
+      box-sizing: border-box;
     }
-    pre{
-      background: var(--codebg);
+
+    body {
+      margin: 0;
+      background: var(--bg);
+      color: var(--text);
+      font-family: system-ui, -apple-system, BlinkMacSystemFont,
+                   "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Arial;
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 24px 16px 80px;
+    }
+
+    .title {
+      font-size: 1.4rem;
+      font-weight: 600;
+      margin-bottom: 24px;
+      color: #f9fafb;
+    }
+
+    .msg {
+      padding: 16px 18px;
+      border-radius: 12px;
+      margin-bottom: 14px;
       border: 1px solid var(--border);
-      border-radius: 10px;
-      padding: 10px;
-      overflow:auto;
-      margin: 10px 0;
+      white-space: pre-wrap;
     }
-    code{
-      background: rgba(255,255,255,.06);
-      border:1px solid rgba(255,255,255,.08);
-      border-radius:6px;
-      padding: 1px 6px;
-    }
-    pre code{background:transparent; border:none; padding:0;}
 
-    /* Формулы: пусть не распирают экран на телефоне */
-    .katex-display{overflow-x:auto; overflow-y:hidden; padding: 6px 0;}
+    .msg.user {
+      background: var(--user);
+    }
+
+    .msg.assistant {
+      background: var(--assistant);
+    }
+
+    .role {
+      font-size: 0.75rem;
+      color: var(--muted);
+      margin-bottom: 6px;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+    }
+
+    pre, code {
+      background: var(--code);
+      border-radius: 8px;
+      padding: 0.4em 0.6em;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas;
+      font-size: 0.9em;
+      overflow-x: auto;
+    }
+
+    pre {
+      padding: 12px;
+      margin: 12px 0;
+    }
+
+    blockquote {
+      border-left: 3px solid #374151;
+      padding-left: 12px;
+      color: #d1d5db;
+      margin: 12px 0;
+    }
+
+    hr {
+      border: none;
+      border-top: 1px solid var(--border);
+      margin: 32px 0;
+    }
+
+    a {
+      color: #60a5fa;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
-
-  <!-- KaTeX (быстро). Подгружается с CDN. -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css">
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/contrib/auto-render.min.js"></script>
-
-  <!-- Мини-рендер Markdown (лёгкий). -->
-  <script defer src="https://cdn.jsdelivr.net/npm/marked@12.0.2/marked.min.js"></script>
-
-  <script defer>
-    function renderAll(){
-      // 1) Markdown -> HTML
-      const nodes = document.querySelectorAll('[data-md]');
-      for (const n of nodes){
-        const src = n.textContent;
-        n.innerHTML = marked.parse(src, { breaks: true, gfm: true });
-      }
-
-      // 2) LaTeX -> KaTeX (поддерживает \( \) и \[ \])
-      renderMathInElement(document.body, {
-        delimiters: [
-          {left: "\\[", right: "\\]", display: true},
-          {left: "\\(", right: "\\)", display: false}
-        ],
-        throwOnError: false
-      });
-    }
-    document.addEventListener("DOMContentLoaded", renderAll);
-  </script>
 </head>
-
 <body>
-  <header>
-    <div class="wrap">
-      <div class="title">
-        <h1>Chat export</h1>
-        <div class="meta">Оффлайн-страница. Вставьте сообщения в блоки ниже.</div>
-      </div>
+  <div class="container">
+    <div class="title">LM Arena — сохранённый диалог</div>
+
+    <!-- USER -->
+    <div class="msg user">
+      <div class="role">user</div>
+      Критически проанализируй многомировую интерпретацию КМ
+      с точки зрения формализуемости в бесконечномерном
+      гильбертовом пространстве.
     </div>
-  </header>
 
-  <main class="wrap">
-    <div class="chat">
+    <!-- ASSISTANT -->
+    <div class="msg assistant">
+      <div class="role">assistant</div>
+      Основная проблема MWI заключается в том, что разложение
+      состояния
+      \( \lvert \Psi \rangle \in \mathcal{H} \)
+      на «ветви»
+      не является базис-инвариантным.
 
-      <!-- Сообщение: User -->
-      <section class="msg">
-        <div class="role">user</div>
-        <article class="content" data-md>
-ВСТАВЬ_СЮДА_ВОПРОС
+      $$\lvert \Psi \rangle = \sum_i c_i \lvert \psi_i \rangle$$
 
-Пример inline: \(a^2+b^2=c^2\)
-
-Пример display:
-\[
-\int_{0}^{1} x^2 \, dx = \frac{1}{3}
-\]
-        </article>
-      </section>
-
-      <!-- Сообщение: Assistant -->
-      <section class="msg">
-        <div class="role">assistant</div>
-        <article class="content" data-md>
-ВСТАВЬ_СЮДА_ОТВЕТ
-
-Код:
-
-```python
-print("hello")
-```
-        </article>
-      </section>
-
+      В бесконечномерном сепарабельном гильбертовом пространстве
+      выбор такого разложения требует дополнительных
+      нефизических структур.
     </div>
-  </main>
+
+    <!-- копируй дальше -->
+  </div>
 </body>
 </html>
