--- a/index.html
+++ b/index.html
@@ -1,211 +1,111 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LM Arena — Chat Log</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>LM Arena — Chat Log (KaTeX, Max)</title>
 
-  <!-- MathJax -->
-  <script>
-    window.MathJax = {
-      tex: {
-        inlineMath: [['\\(', '\\)']],
-        displayMath: [['$$', '$$']],
-      },
-      svg: { fontCache: 'global' }
-    };
-  </script>
-  <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+<!-- KaTeX -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/contrib/auto-render.min.js"
+  onload="renderMathInElement(document.body);"></script>
 
-  <style>
-    :root {
-      --bg: #0b0d10;
-      --panel: #12141a;
-      --panel-alt: #0f1117;
-      --border: #1f2430;
-      --text: #e6e8eb;
-      --muted: #9aa0aa;
-      --accent: #3b82f6;
-      --code: #0a0c12;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      background: var(--bg);
-      color: var(--text);
-      font-family: system-ui, -apple-system, BlinkMacSystemFont,
-                   "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Arial;
-      line-height: 1.65;
-    }
-
-    .page {
-      max-width: 880px;
-      margin: 0 auto;
-      padding: 16px 14px 64px;
-    }
-
-    /* Header */
-    .header {
-      border-bottom: 1px solid var(--border);
-      padding-bottom: 12px;
-      margin-bottom: 24px;
-    }
-
-    .header-title {
-      font-size: 1.1rem;
-      font-weight: 600;
-      color: #f3f4f6;
-    }
-
-    .header-sub {
-      font-size: 0.8rem;
-      color: var(--muted);
-      margin-top: 2px;
-    }
-
-    .model {
-      margin-top: 6px;
-      display: inline-block;
-      font-size: 0.75rem;
-      padding: 3px 8px;
-      border-radius: 999px;
-      background: #0b1220;
-      border: 1px solid #1e3a8a;
-      color: #93c5fd;
-    }
-
-    /* Messages */
-    .msg {
-      padding: 16px 18px;
-      margin-bottom: 14px;
-      background: var(--panel);
-      border: 1px solid var(--border);
-      border-radius: 10px;
-    }
-
-    .msg.user {
-      background: var(--panel-alt);
-    }
-
-    .msg.assistant {
-      background: var(--panel);
-    }
-
-    .role {
-      font-size: 0.7rem;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      color: var(--muted);
-      margin-bottom: 6px;
-    }
-
-    .content {
-      white-space: pre-wrap;
-    }
-
-    /* Typography */
-    h1, h2, h3 {
-      margin: 1em 0 0.4em;
-      font-weight: 600;
-    }
-
-    p {
-      margin: 0.6em 0;
-    }
-
-    blockquote {
-      border-left: 3px solid #2c3345;
-      padding-left: 12px;
-      margin: 12px 0;
-      color: #cbd5e1;
-    }
-
-    pre, code {
-      background: var(--code);
-      border-radius: 8px;
-      padding: 0.4em 0.6em;
-      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas;
-      font-size: 0.9em;
-      overflow-x: auto;
-    }
-
-    pre {
-      padding: 12px;
-      margin: 12px 0;
-    }
-
-    hr {
-      border: none;
-      border-top: 1px solid var(--border);
-      margin: 28px 0;
-    }
-
-    a {
-      color: var(--accent);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    /* Mobile tweaks */
-    @media (max-width: 600px) {
-      .page {
-        padding: 12px 10px 48px;
-      }
-      .msg {
-        padding: 14px 14px;
-      }
-    }
-  </style>
+<style>
+body {margin:0;font-family:Arial,sans-serif;background:#f7f8fa;color:#1a1a1a;}
+.header {padding:16px 20px;background:#fff;border-bottom:1px solid #ddd;}
+.header-title {font-size:1.25rem;font-weight:bold;}
+.header-sub {font-size:0.85rem;color:#555;margin-top:4px;}
+.model-tag {display:inline-block;margin-top:6px;padding:3px 10px;font-size:0.75rem;
+  background:#e1eaff;color:#2962ff;border-radius:12px;font-weight:500;}
+.messages {padding:16px 20px;}
+.msg {margin-bottom:14px;padding:16px 18px;border-radius:8px;border:1px solid #ddd;background:#fff;max-width:880px;}
+.msg.user {border-color:#99ccff;background:#e8f1ff;}
+.msg.assistant {border-color:#cfcfcf;background:#fbfbfb;}
+.role {font-size:0.75rem;font-weight:bold;margin-bottom:6px;color:#444;}
+.content {white-space:pre-wrap;font-size:0.95rem;color:#202125;}
+pre, code {background:#eef0f2;padding:0.4em 0.6em;border-radius:6px;font-family:ui-monospace, monospace;font-size:0.9rem;overflow-x:auto;}
+</style>
 </head>
-
 <body>
-  <div class="page">
 
-    <div class="header">
-      <div class="header-title">LM Arena — Chat Log</div>
-      <div class="header-sub">Архив диалога</div>
-      <div class="model">model: gpt-5.2-high</div>
+<div class="header">
+  <div class="header-title">LM Arena — Chat Log</div>
+  <div class="header-sub">Архив диалога</div>
+  <div class="model-tag">gpt-5.2-high</div>
+</div>
+
+<div class="messages">
+
+  <!-- USER -->
+  <div class="msg user">
+    <div class="role">User</div>
+    <div class="content">
+Привет! Давай разберем многомировую интерпретацию квантовой механики в бесконечномерном гильбертовом пространстве.  
+Хочу увидеть максимально подробный разбор: базис-инвариантность, ветвление, связь с наблюдателем, и как это выражается в формализме через операторные разложения.  
+Постарайся включить несколько “сложных” формул.
     </div>
-
-    <!-- USER -->
-    <div class="msg user">
-      <div class="role">user</div>
-      <div class="content">
-Критически проанализируй многомировую интерпретацию квантовой механики
-с точки зрения её формализуемости в бесконечномерном гильбертовом пространстве.
-      </div>
-    </div>
-
-    <!-- ASSISTANT -->
-    <div class="msg assistant">
-      <div class="role">assistant</div>
-      <div class="content">
-Ключевая трудность MWI заключается в отсутствии
-базис-инвариантного определения ветви.
-
-Состояние
-\( \lvert \Psi \rangle \in \mathcal{H} \)
-может быть разложено бесконечным числом способов:
-
-$$
-\lvert \Psi \rangle = \sum_i c_i \lvert \psi_i \rangle
-$$
-
-В бесконечномерном сепарабельном гильбертовом пространстве
-никакое из этих разложений не обладает привилегированным
-онтологическим статусом без введения дополнительной структуры.
-      </div>
-    </div>
-
-    <!-- копируй дальше -->
-
   </div>
+
+  <!-- ASSISTANT -->
+  <div class="msg assistant">
+    <div class="role">Assistant</div>
+    <div class="content">
+Конечно! Начнем с состояния в бесконечномерном гильбертовом пространстве \(\mathcal{H}\):
+
+\[
+\lvert \Psi \rangle \in \mathcal{H}, \quad
+\mathcal{H} = \overline{\mathrm{span}\{\lvert n \rangle : n \in \mathbb{N}\}}
+\]
+
+Разложение на “ветви” часто записывают так:
+
+\[
+\lvert \Psi \rangle = \sum_i c_i \lvert \psi_i \rangle, \quad 
+\sum_i |c_i|^2 = 1
+\]
+
+**Проблема**: такое разложение **не базис-инвариантно**, т.е. выбор \(\{\lvert \psi_i \rangle\}\) зависит от выбранного ортонормированного базиса, что вызывает следующие последствия:
+
+1. **Наблюдательский выбор**:
+\[
+\lvert \Psi \rangle \otimes \lvert O_0 \rangle 
+\quad\overset{U}{\longrightarrow}\quad
+\sum_i c_i \lvert \psi_i \rangle \otimes \lvert O_i \rangle
+\]
+где \(U\) — эволюция с участием наблюдателя, \(\lvert O_i \rangle\) — состояния наблюдателя.
+
+2. **Проекция на оператор**:
+\[
+\hat{P}_i \lvert \Psi \rangle = c_i \lvert \psi_i \rangle
+\]
+Без конкретного \(\hat{P}_i\) ветвление остаётся неопределенным.
+
+3. **Бесконечномерный эффект**:
+\[
+\text{Для сепарабельного } \mathcal{H} \text{ существует бесконечно много разложений } 
+\lvert \Psi \rangle = \sum_i c_i' \lvert \phi_i \rangle
+\]
+Каждое имеет “ветви”, но физической привилегии у них нет без внешней структуры.
+
+Таким образом, **MWI формализуемо, но только через доп. структуру** (например, определённый базис наблюдателя, decoherence, pointer states).
+
+---
+
+Дополнительно, можно записать суперпозицию через оператор плотности:
+
+\[
+\hat{\rho} = \mathrm{Tr}_{\text{env}} \lvert \Psi \rangle \langle \Psi \rvert
+= \sum_i |c_i|^2 \lvert \psi_i \rangle \langle \psi_i \rvert + 
+\sum_{i\neq j} c_i c_j^* \lvert \psi_i \rangle \langle \psi_j \rvert
+\]
+
+Идея ветвления проявляется через исчезновение кросс-термов \((i \neq j)\) в процессе декогеренции.
+
+---
+  </div>
+  </div>
+
+</div>
 </body>
 </html>
