--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LM Arena — Chat Log (KaTeX, Max)</title>
+<title>LM Arena — Supercharged Chat</title>
 
 <!-- KaTeX -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/contrib/auto-render.min.js"
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.25/dist/katex.min.css">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.25/dist/katex.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.25/dist/contrib/auto-render.min.js"
   onload="renderMathInElement(document.body);"></script>
 
 <style>
@@ -16,13 +16,12 @@ body {margin:0;font-family:Arial,sans-serif;background:#f7f8fa;color:#1a1a1a;}
 .header {padding:16px 20px;background:#fff;border-bottom:1px solid #ddd;}
 .header-title {font-size:1.25rem;font-weight:bold;}
 .header-sub {font-size:0.85rem;color:#555;margin-top:4px;}
-.model-tag {display:inline-block;margin-top:6px;padding:3px 10px;font-size:0.75rem;
-  background:#e1eaff;color:#2962ff;border-radius:12px;font-weight:500;}
+.model-tag {display:inline-block;margin-top:6px;padding:3px 10px;font-size:0.75rem;background:#e1eaff;color:#2962ff;border-radius:12px;font-weight:500;}
 .messages {padding:16px 20px;}
-.msg {margin-bottom:14px;padding:16px 18px;border-radius:8px;border:1px solid #ddd;background:#fff;max-width:880px;}
+.msg {margin-bottom:18px;padding:16px 20px;border-radius:10px;border:1px solid #ddd;background:#fff;max-width:900px;}
 .msg.user {border-color:#99ccff;background:#e8f1ff;}
 .msg.assistant {border-color:#cfcfcf;background:#fbfbfb;}
-.role {font-size:0.75rem;font-weight:bold;margin-bottom:6px;color:#444;}
+.role {font-size:0.75rem;font-weight:bold;margin-bottom:8px;color:#444;}
 .content {white-space:pre-wrap;font-size:0.95rem;color:#202125;}
 pre, code {background:#eef0f2;padding:0.4em 0.6em;border-radius:6px;font-family:ui-monospace, monospace;font-size:0.9rem;overflow-x:auto;}
 </style>
@@ -30,7 +29,7 @@ pre, code {background:#eef0f2;padding:0.4em 0.6em;border-radius:6px;font-family:
 <body>
 
 <div class="header">
-  <div class="header-title">LM Arena — Chat Log</div>
+  <div class="header-title">LM Arena — Supercharged Chat</div>
   <div class="header-sub">Архив диалога</div>
   <div class="model-tag">gpt-5.2-high</div>
 </div>
@@ -41,9 +40,9 @@ pre, code {background:#eef0f2;padding:0.4em 0.6em;border-radius:6px;font-family:
   <div class="msg user">
     <div class="role">User</div>
     <div class="content">
-Привет! Давай разберем многомировую интерпретацию квантовой механики в бесконечномерном гильбертовом пространстве.  
-Хочу увидеть максимально подробный разбор: базис-инвариантность, ветвление, связь с наблюдателем, и как это выражается в формализме через операторные разложения.  
-Постарайся включить несколько “сложных” формул.
+Привет! Сделаем глубокий анализ многомировой интерпретации квантовой механики.  
+Хочу увидеть: ветвление, базис-инвариантность, decoherence, суперпозиции, операторные разложения, плотность и тензоры.  
+Пожалуйста, с формулами на максимум.
     </div>
   </div>
 
@@ -58,52 +57,91 @@ pre, code {background:#eef0f2;padding:0.4em 0.6em;border-radius:6px;font-family:
 \mathcal{H} = \overline{\mathrm{span}\{\lvert n \rangle : n \in \mathbb{N}\}}
 \]
 
-Разложение на “ветви” часто записывают так:
+Разложение на “ветви”:
 
 \[
 \lvert \Psi \rangle = \sum_i c_i \lvert \psi_i \rangle, \quad 
 \sum_i |c_i|^2 = 1
 \]
 
-**Проблема**: такое разложение **не базис-инвариантно**, т.е. выбор \(\{\lvert \psi_i \rangle\}\) зависит от выбранного ортонормированного базиса, что вызывает следующие последствия:
+**Влияние наблюдателя** через эволюцию:
 
-1. **Наблюдательский выбор**:
 \[
 \lvert \Psi \rangle \otimes \lvert O_0 \rangle 
-\quad\overset{U}{\longrightarrow}\quad
+\overset{U}{\longrightarrow}
 \sum_i c_i \lvert \psi_i \rangle \otimes \lvert O_i \rangle
 \]
-где \(U\) — эволюция с участием наблюдателя, \(\lvert O_i \rangle\) — состояния наблюдателя.
 
-2. **Проекция на оператор**:
-\[
-\hat{P}_i \lvert \Psi \rangle = c_i \lvert \psi_i \rangle
-\]
-Без конкретного \(\hat{P}_i\) ветвление остаётся неопределенным.
-
-3. **Бесконечномерный эффект**:
-\[
-\text{Для сепарабельного } \mathcal{H} \text{ существует бесконечно много разложений } 
-\lvert \Psi \rangle = \sum_i c_i' \lvert \phi_i \rangle
-\]
-Каждое имеет “ветви”, но физической привилегии у них нет без внешней структуры.
-
-Таким образом, **MWI формализуемо, но только через доп. структуру** (например, определённый базис наблюдателя, decoherence, pointer states).
-
----
-
-Дополнительно, можно записать суперпозицию через оператор плотности:
+Состояние системы + окружения через оператор плотности:
 
 \[
-\hat{\rho} = \mathrm{Tr}_{\text{env}} \lvert \Psi \rangle \langle \Psi \rvert
-= \sum_i |c_i|^2 \lvert \psi_i \rangle \langle \psi_i \rvert + 
-\sum_{i\neq j} c_i c_j^* \lvert \psi_i \rangle \langle \psi_j \rvert
+\hat{\rho} = \mathrm{Tr}_{env} \lvert \Psi \rangle \langle \Psi \rvert
+= \sum_i |c_i|^2 \lvert \psi_i \rangle \langle \psi_i \rvert
++ \sum_{i\neq j} c_i c_j^* \lvert \psi_i \rangle \langle \psi_j \rvert
 \]
 
-Идея ветвления проявляется через исчезновение кросс-термов \((i \neq j)\) в процессе декогеренции.
+Для многомирового описания полезно использовать **тензорные разложения**:
 
----
+\[
+\mathcal{H}_{total} = \bigotimes_{k=1}^{\infty} \mathcal{H}_k, \quad
+\lvert \Psi \rangle = \sum_{\{i_k\}} C_{i_1 i_2 \dots} \bigotimes_{k} \lvert \psi_{i_k} \rangle
+\]
+
+**Декогеренция** убирает кросс-термы:
+
+\[
+\mathrm{Tr}_{env} \big(\lvert \psi_i \rangle \langle \psi_j \rvert \big) \to 0, \quad i\neq j
+\]
+
+И в итоге мы получаем **ветвление с вероятностями** \(|c_i|^2\), но оно **зависит от выбора базиса**.  
+Таким образом, MWI формализуемо, но требует дополнительных структур для физической интерпретации.
+    </div>
   </div>
+
+  <!-- USER -->
+  <div class="msg user">
+    <div class="role">User</div>
+    <div class="content">
+Отлично, а можешь показать пример ветвления через конкретный квантовый оператор и суперпозицию 2-х кубитов с тензорами?
+    </div>
+  </div>
+
+  <!-- ASSISTANT -->
+  <div class="msg assistant">
+    <div class="role">Assistant</div>
+    <div class="content">
+Конечно! Рассмотрим два кубита \(\lvert q_1 q_2 \rangle \in \mathbb{C}^2 \otimes \mathbb{C}^2\):
+
+\[
+\lvert \Psi \rangle = \frac{1}{\sqrt{2}} \big( \lvert 00 \rangle + \lvert 11 \rangle \big)
+\]
+
+Эволюция с наблюдателем через оператор \(U\):
+
+\[
+U (\lvert \Psi \rangle \otimes \lvert O_0 \rangle)
+= \frac{1}{\sqrt{2}} \big( \lvert 00 \rangle \otimes \lvert O_{00} \rangle
++ \lvert 11 \rangle \otimes \lvert O_{11} \rangle \big)
+\]
+
+Оператор плотности после частичного следа по наблюдателю:
+
+\[
+\hat{\rho}_{sys} = \mathrm{Tr}_{obs} \big( \lvert \Psi_{tot} \rangle \langle \Psi_{tot} \rvert \big)
+= \frac{1}{2} \lvert 00 \rangle \langle 00 \rvert
++ \frac{1}{2} \lvert 11 \rangle \langle 11 \rvert
+\]
+
+Здесь четко видно ветвление на **два “мира”** с вероятностями \(50\%\) и \(50\%\).
+
+Можно усложнить с тензорным разложением 3-х и более кубитов:
+
+\[
+\lvert \Psi_3 \rangle = \sum_{i,j,k \in \{0,1\}} C_{ijk} \lvert i j k \rangle
+\]
+
+Каждая компонента \(C_{ijk}\) задаёт ветвь в многомировой интерпретации.
+    </div>
   </div>
 
 </div>
